# hakiapi

./: .gitignore  README.md  example_oauth.py  pyproject.toml
.github/workflows/: release.yml
examples/: example_github.py  example_gmail.py  example_google_calender.py
hakiapi/: __init__.py
hakiapi/clients/: __init__.py  github.py  gmail.py  google_calendar.py
hakiapi/core/: __init__.py  auth.py  base_client.py  exceptions.py  paginator.py  retry.py
hakiapi/core/oauth/: __init__.py  google.py  refresh.py  token_store.py
tests/: test_auth.py  test_base_client.py  test_exceptions.py  test_github.py  test_gmail.py  test_google.py  test_google_calender.py  test_paginator.py  test_refresh.py  test_retry.py  test_token_store.py
