[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hakiapi"
version = "1.2.2"
description = "A modern Python framework for building clean, typed, and extensible API clients."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    { name = "Gugilla Aakash" },
    { email = "gugillaaakash6@gmail.com" }
]

keywords = ["api-client", "retry", "pagination", "rest-api", "http"]

dependencies = [
    "requests>=2.32.0",
    "urllib3>=1.26.0"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/Gugilla-Aakash/hakiapi"
"Source Code" = "https://github.com/Gugilla-Aakash/hakiapi"
"Bug Tracker" = "https://github.com/Gugilla-Aakash/hakiapi/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["hakiapi", "hakiapi.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
